tests/neg/i6779.check
-- [E007] Type Mismatch Error: tests/neg/i6779.scala:10:32 -------------------------------------------------------------
10 |  def g1[T](x: T): F[G[T]] = x.f(using summon[Stuff]) // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^
   |                             Found:    F[T]
   |                             Required: F[G[T]]
-- [E007] Type Mismatch Error: tests/neg/i6779.scala:12:31 -------------------------------------------------------------
12 |  def g2[T](x: T): F[G[T]] = x.f // error
   |                             ^^^
   |                             Found:    F[T]
   |                             Required: F[G[T]]
-- [E007] Type Mismatch Error: tests/neg/i6779.scala:14:48 -------------------------------------------------------------
14 |  def g3[T](x: T): F[G[T]] = this.extension_f(x)(using summon[Stuff]) // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                             Found:    F[T]
   |                             Required: F[G[T]]
